test/k8s/manifests/l7-policy-named-port.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-policy"
spec:
  description: "L7 policy with a named L4 port for getting started using Kubernetes guide"
  endpointSelector:
    matchLabels:
      id: app1
  ingress:
  - fromEndpoints:
    - matchLabels:
        id: app2
    toPorts:
    - ports:
      - port: "http-80"
        protocol: TCP
      rules:
        http:
        - method: "GET"
          path: "/public"
